--- a/Story2.html
+++ b/Story2.html
@@ -18,7 +18,7 @@
     <h1 align="center">Complete the Form-</h1>
     <h1 align="center">Complete the Story</h1>
     <hr>
-    <label><b>Animal:</b></label>
+    <label><b></b></label>
     <input type="text" name="" >
     <br><br>
     <label><b>Another Animal:</b></label>
